<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/bQuest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:text="@string/b_quest"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:fontFamily="@font/chewy"

        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <AutoCompleteTextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/bQuest" />

    <AutoCompleteTextView
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <AutoCompleteTextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:hint="@string/userName"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:background="@drawable/button_style"
        android:text="@string/submit"
        android:textColor="@color/text_button_color"
        android:textSize="14sp"

        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
        app:layout_constraintEnd_toStartOf="@+id/submitButton_constraint"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.965" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/accept"

        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/submitButton_constraint"
        app:layout_constraintTop_toBottomOf="@+id/terms" />

    <CheckedTextView
        android:id="@+id/terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/warning_color"

        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/submitButton_constraint"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <android.support.constraint.Guideline
        android:id="@+id/horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/submitButton_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <Button
        android:id="@+id/cancel_sign_up_button"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:text="@string/cancel"
        android:textColor="@color/text_button_color"
        app:layout_constraintBottom_toTopOf="@+id/bQuest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>