<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/bQuest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"

        android:text="@string/b_quest"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="50sp"
        app:fontFamily="@font/chewy"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:hint="@string/email"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/bQuest" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/email" />



    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:background="@drawable/button_style"
        android:text="@string/sign_in"
        android:textColor="@color/text_button_color"

        app:layout_constraintBottom_toTopOf="@+id/cancel_sign_in_button"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/cancel_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:background="@drawable/button_style"
        android:text="@string/cancel"
        android:textColor="@color/text_button_color"

        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:background="@android:color/transparent"
        android:text="@string/forgot_your_password"
        android:textColor="@color/warning_color"

        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/cancel_sign_in_button" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <android.support.constraint.Guideline
        android:id="@+id/horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</android.support.constraint.ConstraintLayout>