<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:background="@color/colorAccent">


    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <include layout="@layout/navigation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/bQuest2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:text="@string/b_quest"

            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            app:fontFamily="@font/chewy"
            app:layout_constraintBottom_toTopOf="@+id/th_name"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toTopOf="@id/horizontal_top" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"

            android:text="@string/chief"
            android:textColor="@color/color_black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/bQuest2"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/th_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:hint="@string/treasure_hunt_name"
            android:inputType="textPersonName"

            app:layout_constraintBottom_toTopOf="@+id/choose_hero"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/bQuest2" />

        <EditText
            android:id="@+id/choose_hero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:hint="@string/hero_s_name"

            app:layout_constraintBottom_toTopOf="@+id/hero_email"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/th_name" />

        <Button
            android:id="@+id/quest_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:background="@drawable/button_style"
            android:text="@string/choose_the_hunt_s_quests"
            android:textColor="@color/text_button_color"

            app:layout_constraintBottom_toTopOf="@+id/minimum_contribution"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/hero_email"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Spinner
            android:id="@+id/minimum_contribution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toStartOf="@+id/contribution_spinner_constraint"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/quest_categories" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:background="@drawable/button_style"
            android:text="@string/create"
            android:textColor="@color/text_button_color"

            app:layout_constraintBottom_toTopOf="@+id/go_back"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/minimum_contribution" />

        <Button
            android:id="@+id/go_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:background="@drawable/button_style"
            android:text="@string/go_back"
            android:textColor="@color/text_button_color"

            app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/create_button" />


        <TextView
            android:id="@+id/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            android:text="@string/euro"
            android:textSize="50sp"
            android:textColor="#000000"

            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintStart_toStartOf="@+id/contribution_spinner_constraint"
            app:layout_constraintTop_toBottomOf="@+id/quest_categories" />

        <android.support.constraint.Guideline
            android:id="@+id/contribution_spinner_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.57" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09975669" />

        <android.support.constraint.Guideline
            android:id="@+id/vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9026764" />

        <EditText
            android:id="@+id/hero_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"


            android:inputType="textPersonName"
            android:hint="@string/hero_s_email"

            app:layout_constraintBottom_toTopOf="@+id/quest_categories"
            app:layout_constraintEnd_toStartOf="@+id/vertical_right"
            app:layout_constraintStart_toStartOf="@+id/vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/choose_hero" />


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView

        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation"
        android:layout_gravity ="start"
        app:headerLayout="@layout/header">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>