<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bQuest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"

        android:text="@string/b_quest"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"

        app:fontFamily="@font/chewy"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toTopOf="@+id/horizontal_top"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/b_quest_logo"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/bQuest"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/sign_in"
        android:text="@string/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/button_style"
        android:textColor="@color/text_button_color"

        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/sign_up"
        android:text="@string/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/button_style"
        android:textColor="@color/text_button_color"

        app:layout_constraintBottom_toTopOf="@+id/optionText"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <TextView
        android:id="@+id/optionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/or_sign_with"


        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"

        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <View
        android:id="@+id/divider5"

        android:layout_width="0dp"
        android:layout_height="5dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"

        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/optionText" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"


        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/facebook_button"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />


    <Button
        android:id="@+id/facebook_button"
        android:text="@string/facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/button_style"
        android:textColor="@color/text_button_color"

        app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom"
        app:layout_constraintEnd_toStartOf="@+id/vertical_right"
        app:layout_constraintStart_toStartOf="@+id/vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9026764" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10218978" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.050075874" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9499241" />

</android.support.constraint.ConstraintLayout>